www/styles/backup.less
/* ... */
.backup .item-box.selected.removing .item {
  background-color: @item-removing-active-bg;
}

.backup .item-box .task-type-icon {
  margin-top: -21px;
  margin-left: 8px;
  float: left;
}

.backup .item-box .task-failed-icon {
  margin-top: -21px;
  margin-left: 26px;
  float: left;
}

.backup .item-box .toggle-info {
  margin-top: -21px;
  margin-right: 20px;
  float: right;
  display: none;
}

.backup .item-box .icon {
  margin-top: -21px;
  margin-right: 5px;
  float: right;
  display: none;
}

.backup .item-box .task-title {
  font-size: 1.2em;
  font-weight: bold;
}

.backup .item-box .task-id {
  margin: -3px 0 -3px 0;
  color: @item-id-fg;
  font-size: 0.7em;
  font-weight: bold;
  line-height: 12px;
}

.backup .item-box .info {
  color: @lighter-fg;
  background-color: @box-bg;
  border-left: @box-border;
  border-right: @box-border;
  border-bottom: @box-border;
  padding: 5px;
  display: none;
}

.backup .item-box.pending .info {
  background-color: @item-pending-box-bg;
  border-left: @item-pending-box-border;
  border-right: @item-pending-box-border;
  border-bottom: @item-pending-box-border;
}

.backup .item-box.aborting .info {
  background-color: @item-aborting-box-bg;
  border-left: @item-aborting-box-border;
  border-right: @item-aborting-box-border;
  border-bottom: @item-aborting-box-border;
}

.backup .item-box.failed .info,
.backup .item-box.aborted .info {
  background-color: @item-failed-box-bg;
  border-left: @item-failed-box-border;
  border-right: @item-failed-box-border;
  border-bottom: @item-failed-box-border;
}

.backup .item-box.removing .info {
  background-color: @item-removing-box-bg;
  border-left: @item-removing-box-border;
  border-right: @item-removing-box-border;
  border-bottom: @item-removing-box-border;
}

.backup .object-list {
  margin: 5px 0 0 0;
  padding: 0 5px 0 5px;
}

.backup .object-list-box {
  overflow-x: hidden;
  overflow-y: auto;
  height: 100%;
  margin-top: 20px;
}

.backup .object-list table {
  width: 100%;
}

.backup .object-list colgroup {
  width: 100%;
}

.backup .object-list thead {
  height: 0px;
  top: 105px;
  position: absolute;
}

.backup .object-list tr {
  width: inherit;
}

.backup .object-list .select-col-group,
.backup .object-list .select-header,
.backup .object-list .select-col {
  width: 20px;
  min-width: 20px;
  max-width: 20px;
}

.backup .object-list .select-header {
  padding-left: 5px;
}

.backup .object-list .select-header .select {
  width: 11px;
  height: 11px;
  border: @object-border;
}

.backup .object-list .select-header .select.selected:hover {
  border: @object-hover-border;
}

.backup .object-list .select-header .select.selected .select-inner {
  width: 15px;
  height: 15px;
  background-position: -5px -6px;
  background-image: @checkmark-partial-uri;
}

.backup .object-list .title-col-group,
.backup .object-list .title-header,
.backup .object-list .title-col {
  width: auto;
  min-width: 120px;
  max-width: none;
}

.backup .object-list .size-col-group,
.backup .object-list .size-header,
.backup .object-list .size-col {
  width: 70px;
  min-width: 70px;
  max-width: none;
}

.backup .object-list .modified-col-group,
.backup .object-list .modified-header,
.backup .object-list .modified-col {
  width: 110px;
  min-width: 110px;
  max-width: none;
}

.backup .object-list .title-title,
.backup .object-list .size-title,
.backup .object-list .modified-title {
  font-size: 11px;
  font-weight: bold;
  text-align: left;
  color: rgb(122, 121, 124);
}

.backup .object-list .object-row {
  cursor: default;
  color: @darker-fg;
}

.backup .object-list .object-row:hover,
.backup .object-list .object-row.selected {
  background-color: @object-selected-bg;
}

.backup .object-list .select-col {
  border-bottom: @object-border;
  width: 20px;
  max-width: 20px;
  padding: 5px 0px 3px 5px;
}

.backup .object-list .select {
  width: 11px;
  height: 11px;
  border: @object-border;
}

.backup .object-list .select:hover {
  border: @object-hover-border;
}

.backup .object-list .select.selected .select-inner {
  width: 15px;
  height: 15px;
  background-position: -4px -6px;
  background-image: @checkmark-uri;
}

.backup .object-list .title-col,
.backup .object-list .size-col,
.backup .object-list .modified-col {
  border-bottom: @object-border;
}

.backup .dir-name:hover {
  text-decoration: underline;
  cursor: pointer;
}

.backup .object-list-path {
  padding: 0 5px 0 5px;
  overflow-x: hidden;
  overflow-y: hidden;
  white-space: nowrap;
}

.backup .object-path,
.backup .object-path div {
  display: inline-block;
}

.backup .object-path .name {
  color: @object-path-fg;
  font-size: 0.9em;
  cursor: pointer;
}

.backup .object-path .name.last {
  cursor: default;
}

.backup .object-path .last {
  font-weight: bold;
}

.backup .object-path .seperator {
  width: 4px;
  height: 7px;
  background-image: @path-seperator-uri;
  opacity: 0.55;
  margin: 0 4px 0 4px;
}

.backup .object-drop {
  .width-calc(~'38% - 7px');
  min-width: @object-drop-min-width;
  margin-top: 6px;
  position: absolute;
  border: @object-drop-border;
  position: absolute;
  background-color: @object-drop-bg;
  z-index: 5;
}

.backup .object-drop.hover {
  background-color: @object-drop-hover-bg;
}

.backup .object-drop .float {
  float: left;
  height: 50%;
  margin-bottom: -27px;
}

.backup .object-drop .text {
  color: #474747;
  width: 150px;
  border: @object-drop-text-border;
  text-align: center;
  font-weight: bold;
  padding: 15px 0 15px 0;
  background-color: @object-drop-text-bg;
  margin: 0 auto;
  position: relative;
  clear: both;
}

.backup.drag-box {
  color: @drag-box-fg;
  font-size: 0.9em;
  font-weight: bold;
  position: absolute;
  padding: 3px 3px 3px 10px;
  border-style: solid;
  border-width: 1px;
  pointer-events: none;
  background-color: @drag-box-bg;
  box-shadow: @drag-box-shadow;
  padding: 7px 7px 7px 12px;
  cursor: pointer;
  z-index: 10;
}

